--- a/credit_bancaire/views/auto_global.xml
+++ b/credit_bancaire/views/auto_global.xml
@@ -4,12 +4,11 @@
         <field name="name">credit.autorisation_global.form</field>
         <field name="model">credit.autorisation_global</field>
         <field name="arch" type="xml">
-
             <form>
                 <header>
                     <button id="button_Disponibilité" name="action_Disponible" string="Confirmer"
-                                    class="btn-primary"
-                                    type="object"/>
+                            class="btn-primary"
+                            type="object"/>
                 </header>
                 <sheet>
                     <div class="oe_title">
@@ -19,12 +18,37 @@
                     </div>
                     <group>
                         <field name="banque"/>
-                     </group>
+                        <field name="taux"/>
+                    </group>
                     <notebook>
                         <page string="Autorisations">
-                            <field name="ligne_autorisation"/>
+                            <field name="ligne_autorisation">
+                                <tree>
+                                    <field name="type"/>
+                                    <field name="condition" optional="hide"/>
+                                    <field name="validite"/>
+                                    <field name="rappel"/>
+                                    <field name="montant" sum="Total amount" widget="monetary" optional="show"/>
+                                </tree>
+                                <form>
+                                    <group>
+                                        <field name="type"/>
+                                        <field name="montant"/>
+                                        <field name="condition_objet"/>
+                                        <field name="condition"/>
+                                    </group>
+                                    <group>
+                                        <field name="date_limit"/>
+                                        <field name="validite"/>
+                                        <field name="rappel"/>
+                                    </group>
+                                </form>
+                            </field>
                         </page>
                     </notebook>
+                    <group>
+                        <field name="file_ticket"/>
+                    </group>
 
                 </sheet>
                 <div class="oe_chatter">
@@ -42,7 +66,7 @@
         <field name="arch" type="xml">
             <tree sample="1">
                 <field name="banque"/>
-                <field name="ligne_autorisation"/>
+                <field name="ligne_autorisation" widget="many2many_tags"/>
             </tree>
         </field>
     </record>
