--- a/credit_bancaire/views/credit_autorisation.xml
+++ b/credit_bancaire/views/credit_autorisation.xml
@@ -22,6 +22,7 @@
                         <field name="banque"/>
                         <field name="type"/>
                         <field name="montant"/>
+                        <field name="condition_objet"/>
                         <field name="condition"/>
                     </group>
                     <group>
