commerce exterieur modification

--- a/credit_bancaire/views/auto_global.xml
+++ b/credit_bancaire/views/auto_global.xml
@@ -47,7 +47,8 @@
                         </page>
                     </notebook>
                     <group>
-                        <field name="file_ticket"/>
+                        <field name="file_ticket" filename="file_name"/>
+                        <field name="file_name" invisible="1"/>
                     </group>
 
                 </sheet>
