--- a/credit_bancaire/views/credit_operation_pd.xml
+++ b/credit_bancaire/views/credit_operation_pd.xml
@@ -9,7 +9,7 @@
 
                     <button id="button_confirm" name="action_validation" string="Confirm" class="btn-primary"
                             invisible="state != 'verification'" type="object"
-                            />
+                    />
 
                     <field name="state"
                            widget="statusbar"
@@ -68,10 +68,105 @@
         <field name="view_mode">tree,form</field>
     </record>
 
+
+    <record id="view_operation_deb_mt_tree" model="ir.ui.view">
+        <field name="name">credit.operation.deb.tree</field>
+        <field name="model">credit.operation.deb</field>
+        <field name="arch" type="xml">
+            <tree sample="1" create="0" delete="0">
+                <field name="name" readonly="1"/>
+                <field name="ligne_autorisation"/>
+                <field name="banque_id"/>
+                <field name="type"/>
+                <field name="deblocage_date"/>
+                <field name="echeance_date"/>
+                <field name="echeance_fin_date"/>
+                <field name="montant_debloque" sum="Total amount" widget="monetary" optional="show"/>
+                <field name="montant_rembourser" sum="Total amount" widget="monetary" optional="show"/>
+            </tree>
+        </field>
+    </record>
+    <record id="view_operation_deb_mt_form" model="ir.ui.view">
+        <field name="name">credit.operation.deb.form</field>
+        <field name="model">credit.operation.deb</field>
+        <field name="arch" type="xml">
+            <form create="0" delete="0">
+                <header>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,confirmed"/>
+                </header>
+                <sheet>
+                    <div name="button_box" position="inside">
+                        <button name="open_folder" type="object" class="oe_stat_button"
+                                invisible="type != 4 or not folder_id"
+                                icon="fa-file-text-o">
+                            <div class="o_field_widget o_stat_info">
+                                <span class="o_stat_text">LC ouverte</span>
+                            </div>
+                        </button>
+                    </div>
+                    <div class="oe_title">
+
+                        <h1>
+                            <field name="name" readonly="1"/>
+                        </h1>
+                    </div>
+                    <group>
+                        <group>
+                            <field name="banque_id" readonly="1"/>
+                            <field name="type" readonly="1"/>
+                            <field name="ligne_autorisation" readonly="1"/>
+                            <field name="reference_credit" readonly="1"/>
+                            <field name="ref_interne" readonly="1"/>
+                            <field name="client" readonly="1"/>
+                            <field name="taux" invisible="1"/>
+                            <field name="folder_id" invisible="1"/>
+                        </group>
+                        <group>
+                            <field name="montant_debloque" readonly="1"/>
+                            <field name="montant_add" readonly="1"/>
+                            <field name="montant_total" readonly="1"/>
+                            <field name="montant_rembourser" readonly="1"/>
+                            <field name="deblocage_date" readonly="1"/>
+                            <field name="echeance_date" string="Date de 1er échéance"/>
+                            <field name="echeance_fin_date" string="Date du dernier échéance"/>
+                        </group>
+                    </group>
+                    <group>
+                        <field name="file_accord" filename="file_name1"/>
+                        <field name="file_name1" invisible="1"/>
+                    </group>
+                </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
+            </form>
+        </field>
+    </record>
+    <record id="operation_deb_mt_action" model="ir.actions.act_window">
+        <field name="name">Prorogation échéance crédit à MT</field>
+        <field name="res_model">credit.operation.deb</field>
+        <field name="view_mode">tree,form</field>
+        <field name="domain">[('type_ligne', 'in', ['2', '3']), ('state', '=', 'confirmed')]</field>
+        <field name="view_ids" eval="[(5, 0, 0),
+            (0, 0, {'view_mode': 'tree', 'view_id': ref('credit_bancaire.view_operation_deb_mt_tree')}),
+            (0, 0, {'view_mode': 'form', 'view_id': ref('credit_bancaire.view_operation_deb_mt_form')})]"/>
+
+    </record>
     <menuitem id="operation_pd_menu"
-              name="Prolongement Date "
+              name="Prolongation Date"
               parent="oper_credit"
+              sequence="20"/>
+    <menuitem id="operation_pd_ct_menu"
+              name="Prolongation à CT"
+              parent="operation_pd_menu"
               action="operation_pd_action"
+              sequence="20"/>
+    <menuitem id="operation_pd_mt_menu"
+              name="Prolongation à MT"
+              parent="operation_pd_menu"
+              action="operation_deb_mt_action"
               sequence="20"/>
 
 </odoo>
