--- a/purchase_import/views/inherits_view.xml
+++ b/purchase_import/views/inherits_view.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-
-
     <record id="purchase_order_inherit" model="ir.ui.view">
         <field name="name">purchase.order.view.inherit</field>
         <field name="model">purchase.order</field>
@@ -10,9 +8,9 @@
         <field name="arch" type="xml">
             <data>
                 <xpath expr="//field[@name='date_order']" position="after">
-                    <field name="is_import"/>
-                    <field name="import_folder" invisible="is_import != True"/>
-                    <field name="conditions" invisible="is_import != True"/>
+                    <field name="is_import" readonly="1"/>
+                    <field name="import_folder"  attrs="{'invisible': [ ('is_import', '!=', True)]}"/>
+                    <field name="conditions" attrs="{'invisible': [ ('is_import', '!=', True)]}"/>
                 </xpath>
 
 
@@ -31,11 +29,8 @@
                     <field name="is_import"/>
                     <field name="import_folder"/>
                 </xpath>
-
-
             </data>
         </field>
     </record>
-
 
 </odoo>
