--- a/credit_bancaire/views/credit_operation_pd.xml
+++ b/credit_bancaire/views/credit_operation_pd.xml
@@ -10,10 +10,10 @@
                     <button id="button_confirm" name="action_validation" string="Confirm" class="btn-primary"
                             invisible="state != 'verification'" type="object"
                     />
-
                     <field name="state"
                            widget="statusbar"
                            statusbar_visible="verification,confirm"/>
+
                 </header>
                 <sheet>
                     <div class="oe_title">
@@ -24,16 +24,17 @@
                     </div>
 
                     <group>
-
                         <field name="banque"/>
                         <field name="type"/>
-                        <field name="ligne_autorisation"/>
                         <field name="ref_opr_deb"/>
                         <field name="echeance_date_old"/>
                         <field name="echeance_date_new"/>
                         <field name="note"/>
                     </group>
-
+                    <group>
+                        <field name="file_accord" filename="file_name1"/>
+                        <field name="file_name1" invisible="1"/>
+                    </group>
                     <notebook>
 
                     </notebook>
