--- a/purchase_import/views/purchase_international.xml
+++ b/purchase_import/views/purchase_international.xml
@@ -20,7 +20,7 @@
 
 
         <record id="purchase_order_list" model="ir.actions.act_window">
-            <field name="name">Achat international</field>
+            <field name="name">Commerce Extérieur</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">purchase.order</field>
             <field name="view_mode">tree,form</field>
@@ -35,14 +35,12 @@
         <!--    groups="purchase_import.group_importation" -->
         <menuitem
                 id="menu_purchase_order_import"
-                name="Achat internationnal"
+                name="Commerce Extérieur"
                 parent="menu_purchase_import"
 
                 action="purchase_order_list"
                 sequence="20"
         />
-
-
 
         <record id="purchase_rfq" model="ir.actions.act_window">
             <field name="name">Requests for Quotation</field>
